@@ -36,6 +36,10 @@ BUG FIXES IN 1.10
   XMLConfiguration now adds attributes of elements defining a list to
   all list nodes.
 
+* [CONFIGURATION-550] Missing conversion to char
+
+  Conversion to Character is now supported.
+
 * [CONFIGURATION-555] XMLConfiguration doesn't seem to be preserving whitespace 
                       for the current node where xml:space="preserve" is set.
 
